--- a/Game.ipynb
+++ b/Game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def space_check(board: list, position: int) -> bool:\n",
-    "    return board[position] == ' '\n"
+    "    return board[position] == ' ' or board[position] in [str(i) for i in range(1,10)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,19 +107,19 @@
     "    for i in range(1,10):\n",
     "        if space_check(board, i):\n",
     "            return False\n",
-    "    return True"
+    "    return True # Full board detected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def player_choice(board):\n",
     "    position = 0\n",
     "\n",
-    "    while position not in [1, 2, 3, 4, 5, 6, 7, 8, 9] or board[position] != ' ':\n",
+    "    while position not in [1, 2, 3, 4, 5, 6, 7, 8, 9] or board[position] in [range(1,10)]: # board[position] != ' '\n",
     "        \n",
     "        #check for strings in case of invalid input\n",
     "        try:\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +156,13 @@
     "# Actual game\n",
     "print('Welcome to Tic Tac Toe!')\n",
     "# Initialize new test board\n",
-    "play_board = [' '] * 10\n",
+    "play_board = [' ','1','2','3','4','5','6','7','8','9']\n",
     "\n",
     "while True:\n",
+    "    # Initialize new test board\n",
+    "    play_board = [' ','1','2','3','4','5','6','7','8','9']\n",
+    "\n",
+    "    \n",
     "    # Set game up\n",
     "    Turn = choose_first()\n",
     "    p1_marker,p2_marker = player_input()\n",
@@ -201,7 +205,7 @@
     "            place_marker(play_board,p2_marker,p2_choice)\n",
     "\n",
     "            # check win con\n",
-    "            if win_check(play_board,p1_marker):\n",
+    "            if win_check(play_board,p2_marker):\n",
     "                display_board(play_board)\n",
     "                print('Player 2 has won!')\n",
     "                game_on = False\n",
@@ -218,8 +222,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
